--- a/configs/config.yml
+++ b/configs/config.yml
@@ -2,7 +2,7 @@ port: "8000"
 
 db:
   username: "postgres"
-  host: "db"        # db
-  port: "5432"             # 5432
+  host: "db"
+  port: "5432"
   dbname: "postgres"
   sslmode: "disable"
